--- a/README.adoc
+++ b/README.adoc
@@ -6,7 +6,8 @@ https://www.linkedin.com/in/saigovardhan/[Linkedin] |
 mailto:saigov14@gmail.com[Email] 
 
 Hi, I’m a CPU Design Engineer at https://incoresemi.com/[InCore Semiconductors]. 
-I graduated B.Tech in Electronics and Communication from https://pes.edu/[PES University], with Teaching Assistant experience for three core subjects, eight Cadence Digital Badges for the `Digital Design and Signoff' track, and a VLSI Specialization.
+
+I graduated B.Tech in Electronics and Communication from https://pes.edu/[PES University], with Teaching Assistant experience for three core subjects, eight Cadence Digital Badges for the Digital Design and Signoff track, and a VLSI Specialization.
 I have earlier worked at IIITB, IISC (OrbitAID), CIE PESU and CIOT PESU.
 
 === Digital Design
