--- a/README.adoc
+++ b/README.adoc
@@ -7,7 +7,7 @@ mailto:sai.govardhan@incoresemi.com[Work Email] |
 mailto:saigov14@gmail.com[Personal Email] |
 https://www.goodreads.com/user/show/45335591-sai-govardhan[Goodreads]
 
-Hi, I’m a CPU Design Engineer at https://incoresemi.com/[InCore Semiconductors]. 
+Hi, I’m a CPU uArch Design Engineer at https://incoresemi.com/[InCore Semiconductors]. 
 
 I graduated B.Tech in Electronics and Communication from https://pes.edu/[PES University], with Teaching Assistant experience for three core subjects, eight Cadence Digital Badges for the Digital Design and Signoff track, and a VLSI Specialization.
 I have earlier worked at IIITB, IISC (OrbitAID), CIE PESU and CIOT PESU.
