--- a/README.adoc
+++ b/README.adoc
@@ -3,7 +3,7 @@
 https://govardhnn.github.io/cv/govardhan_cv.pdf[CV] |
 https://govardhnn.github.io[Personal Website] |
 https://www.linkedin.com/in/saigovardhan/[Linkedin] |
-mailto:sai.govardhan@incoresemi.com[Work Email] |
+mailto:sgovardhan@agranilabs.com[Work Email] |
 mailto:saigov14@gmail.com[Personal Email] |
 https://www.goodreads.com/user/show/45335591-sai-govardhan[Goodreads]
 
