--- a/README.adoc
+++ b/README.adoc
@@ -7,7 +7,7 @@ mailto:sgovardhan@agranilabs.com[Work Email] |
 mailto:saigov14@gmail.com[Personal Email] |
 https://www.goodreads.com/user/show/45335591-sai-govardhan[Goodreads]
 
-Hey, I am a Microarchitect at https://www.agranilabs.com/[Agrani Labs].
+Hi, I am a Microarchitect at https://www.agranilabs.com/[Agrani Labs].
 
 Here are some links to my previous work:
 
